<?xml version="1"?>
<package format="3">
    <name>arp_msgs</name>
    <version>1.0.0</version>
    <description>
        <p>PROJECT: "AR Paint"</p>
        <p>This package contains custom messages used by the ARP system.</p>
    </description>

    <author>A.C. Buynak</author>
    <maintainer email="buynak.9@osu.edu">A.C. Buynak (AIMS Lab @ The Ohio State University)</maintainer>
    <license>Apache 2.0</license>

    <member_of_group>rosidl_interface_packages</member_of_group>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>
    
    <depend>geometry_msgs</depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <test_depend>ament_lint_auto</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>